# accesshub-backend

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  diagram.txt  entrypoint.sh  pyproject.toml  structure.txt
accesshub/: __init__.py  adapters.py  apps.py  auth_views.py  backends.py  exceptions.py  permissions.py  serializers.py  signals.py  views.py
accesshub/templates/account/email/: email_confirmation_message.html  email_confirmation_signup_message.html  email_confirmation_signup_subject.txt  email_confirmation_subject.txt  password_reset_key_message.html  password_reset_key_message.txt  password_reset_key_subject.txt
config/: settings.py  urls.py
