[project]
name = "sine-qua-non-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "pedrosimiao",email = "pedrolumiere@gmail.com"}
]
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "django (==5.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-allauth (>=65.13.1,<66.0.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
